--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -62,6 +63,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-places-autocomplete": "^4.0.1",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
