--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
